# influencerflow

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  railway.toml
.claude/: settings.json
api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  002_groups_and_grouping.py  003_add_near_duplicate_clustering.py  004_edit_versions_table.py  005_ai_cache_table.py  006_cost_log_table.py  007_face_crops_table.py  008_descriptions_table.py  009_exports_table.py  010_app_settings_table.py
api/app/: __init__.py  config.py  db.py  dependencies.py  main.py
api/app/integrations/: __init__.py  claude.py  google_drive.py  replicate.py
api/app/lib/: __init__.py  blend.py  changes_log.py  color_ops.py  exif.py  face_detect.py  filename_parser.py  jwt_utils.py  phash.py  preview.py  tile_pack.py
api/app/models/: __init__.py  ai_cache.py  asset.py  cost_log.py  description.py  edit_version.py  export.py  face_crop.py  group.py  session.py  settings.py  storage.py  user.py
api/app/repositories/: __init__.py  ai_cache.py  asset.py  cost_log.py  description.py  edit_version.py  export.py  face_crop.py  group.py  session.py  settings.py  storage.py  user.py
api/app/routers/: assets.py  auth.py  cost.py  descriptions.py  edits.py  events.py  exports.py  face_crops.py  groups.py  health.py  sessions.py  settings.py  storage.py
api/app/schemas/: __init__.py  auth.py  settings.py
api/app/services/: budget_service.py  cost_service.py  description_service.py  editing_service.py  grouping_service.py  settings_service.py
api/app/testing/: e2e_app.py  mocks.py
api/app/workers/: celery_app.py  tasks_editing.py  tasks_export.py  tasks_sync.py
api/assets/: style_seed.txt
api/assets/luts/: cinematic_moody.cube  editorial_neutral.cube  golden_hour.cube
api/scripts/: generate_luts.py  seed_user.py
api/tests/: conftest.py  test_celery.py  test_changes_log.py  test_color_ops.py  test_cost_service.py  test_editing_service.py  test_face_detect.py  test_grouping_service.py  test_health.py  test_phash.py  test_settings.py  test_tile_pack.py
api/tests/fixtures/: generate_images.py
config/: filename_patterns.yaml  preview.config.ts
docs/: API.md  COMMANDS.md  CREDENTIALS.md  DATA.md  DECISIONS.md  FLOW.md  MVP_SPEC.md  PROMPTS.md
scripts/: _lib.sh  bootstrap.sh  build.sh  clean-data.sh  clean.sh  dev-api.sh  dev-web.sh  dev.sh  e2e.sh  format.sh  lint.sh  logs.sh  migrate-new.sh  migrate.sh  ps.sh  reset-db.sh  setup-credentials.sh  shell-api.sh  test-api.sh  test-web.sh  test.sh
web/: .dockerignore  (+8 more)
(+68 files in other folders)
