[project]
name = "influencerflow-api"
version = "0.1.0"
description = "InfluencerFlow FastAPI backend + Celery workers"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Juan" }]

dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.2",
    # Data
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",
    "psycopg2-binary>=2.9.9",  # for Alembic migrations (sync)
    # Settings / validation
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "pydantic[email]>=2.9.2",
    # Queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.8",
    # Logging
    "structlog>=24.4.0",
    # Auth & Security
    "bcrypt>=4.1.3",
    "pyjwt>=2.8.0",
    "slowapi>=0.1.9",
    # Google Drive
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.108.0",
    "cryptography>=42.0.0",
    # Image processing
    "pillow>=10.1.0",
    "piexif>=1.1.3",
    "colour-science>=0.4.4",
    "numpy>=1.24.0",  # transitive for colour-science
    "face-recognition>=1.3.0",
    "python-multipart>=0.0.26",
    "anthropic>=0.96.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI uses Depends() in default args by design
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["app.workers.*"]
# Celery's type stubs are loose; relax strictness there.
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
